# cfglib-py

./: .gitignore  .pylintrc  .readthedocs.yml  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pythonpackage.yml
cfglib/: __init__.py  config.py  spec.py  utils.py  validation.py
cfglib/sources/: __init__.py  args.py  env.py
cmds/: check.sh
docs/: Makefile  api_docs.rst  cfglib.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
examples/: cmdline_tool.py  cmdline_tool_cfg.json  example_tool.py
tests/: test_cfglib.py  test_configs.py
tests/config/: test_main_configs.py  test_projected_config.py
tests/examples/: test_example_tool.py
tests/sources/: test_args.py  test_env.py
tests/spec/: test_composite_fields.py  test_spec_validated_config.py
tests/validation/: test_validation_paths.py  test_validation_rules.py
