[tool.poetry]
name = "cfglib"
version = "0.2.0a1"
description = "An extensible configuration library"
authors = ["Anton Barkovsky <anton@swarmer.me>"]
license = "MIT license"
homepage = "https://github.com/swarmer/cfglib-py"
documentation = "https://cfglib.readthedocs.io/en/latest/"
keywords = ["configuration", "settings"]
packages = [
    { include = "cfglib" },
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.6,<4"

[tool.poetry.dev-dependencies]
bumpversion = "^0.5.3"
coverage = "^4.5"
ipython = "*"
mypy = "~0"
pudb = "*"
pylint = "^2.2"
pytest = "^4.0"
pytest-runner = "^4.2"
Sphinx = "^1.8"
sphinxcontrib-apidoc = "^0.3.0"
sphinxcontrib-fulltoc = "^1.2"
tox = "^3.6"
watchdog = "^0.9.0"

[build-system]
requires = ["poetry>=0.12", "rtd-poetry"]
build-backend = "rtd_poetry"
