[tool.poetry]
name = "cfglib"
version = "1.1.0b1"
description = "An extensible configuration library"
readme = "README.rst"
authors = ["Anton Barkovsky <anton@swarmer.me>"]
license = "MIT license"
homepage = "https://github.com/swarmer/cfglib-py"
documentation = "https://cfglib.readthedocs.io/en/latest/"
keywords = ["configuration", "settings"]
packages = [
    { include = "cfglib" },
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7,<4"

# Fake dependencies only used to build docs
Sphinx = { version = "^1.8", optional = true }
sphinxcontrib-apidoc = { version = "^0.3.0", optional = true }
sphinxcontrib-fulltoc = { version = "^1.2", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinxcontrib-apidoc", "sphinxcontrib-fulltoc"]

[tool.poetry.dev-dependencies]
bumpversion = "^0.5.3"
coverage = "^4.5"
ipython = "*"
mypy = "~0"
pudb = "*"
pylint = "^2.2"
pytest = "^4.0"
pytest-runner = "^4.2"
tox = "^3.6"
watchdog = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
